// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SOBJ data SOBJ org (agr) snapshot 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "standard_object_data": Object {
          "pa_last_year_data": Array [
            Object {
              "amount": 440958986.97,
              "so_num": 1,
              "year": "pa_last_year",
            },
            Object {
              "amount": 14190482.49,
              "so_num": 2,
              "year": "pa_last_year",
            },
            Object {
              "amount": 7533482.41,
              "so_num": 3,
              "year": "pa_last_year",
            },
            Object {
              "amount": 112947119.62,
              "so_num": 4,
              "year": "pa_last_year",
            },
            Object {
              "amount": 7090191.68,
              "so_num": 5,
              "year": "pa_last_year",
            },
            Object {
              "amount": 14326028.84,
              "so_num": 6,
              "year": "pa_last_year",
            },
            Object {
              "amount": 37106859.27,
              "so_num": 7,
              "year": "pa_last_year",
            },
            Object {
              "amount": 65545306.56,
              "so_num": 8,
              "year": "pa_last_year",
            },
            Object {
              "amount": 39207195.65,
              "so_num": 9,
              "year": "pa_last_year",
            },
            Object {
              "amount": 1573796728.55,
              "so_num": 10,
              "year": "pa_last_year",
            },
            Object {
              "amount": 362983440.11,
              "so_num": 12,
              "year": "pa_last_year",
            },
            Object {
              "amount": -42809028.24,
              "so_num": 21,
              "year": "pa_last_year",
            },
            Object {
              "amount": -17966444.27,
              "so_num": 22,
              "year": "pa_last_year",
            },
          ],
          "personel_data": Array [
            Object {
              "amount": 575027756.78,
              "so_num": 1,
              "year": "pa_last_year_5",
            },
            Object {
              "amount": 580348084.41,
              "so_num": 1,
              "year": "pa_last_year_4",
            },
            Object {
              "amount": 461498583.39,
              "so_num": 1,
              "year": "pa_last_year_3",
            },
            Object {
              "amount": 443070522.86,
              "so_num": 1,
              "year": "pa_last_year_2",
            },
            Object {
              "amount": 440958986.97,
              "so_num": 1,
              "year": "pa_last_year",
            },
          ],
          "personel_last_year_data": Array [
            Object {
              "amount": 440958986.97,
              "so_num": 1,
              "year": "pa_last_year",
            },
          ],
          "top_n_with_other": Array [
            Object {
              "amount": 1573796728.55,
              "so_num": 10,
              "year": "pa_last_year",
            },
            Object {
              "amount": 440958986.97,
              "so_num": 1,
              "year": "pa_last_year",
            },
            Object {
              "amount": 362983440.11,
              "so_num": 12,
              "year": "pa_last_year",
            },
            Object {
              "amount": 237171194.01000005,
              "so_num": 0,
              "year": "pa_last_year",
            },
          ],
        },
      },
    },
  },
}
`;

exports[`SOBJ data SOBJ: program (AGR-AAA00) snapshot 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "standard_object_data": Object {
          "pa_last_year_data": Array [
            Object {
              "amount": 22397188.9,
              "so_num": 1,
              "year": "pa_last_year",
            },
            Object {
              "amount": 751810.2,
              "so_num": 2,
              "year": "pa_last_year",
            },
            Object {
              "amount": 279366.75,
              "so_num": 3,
              "year": "pa_last_year",
            },
            Object {
              "amount": 7696449.19,
              "so_num": 4,
              "year": "pa_last_year",
            },
            Object {
              "amount": 148999.05,
              "so_num": 5,
              "year": "pa_last_year",
            },
            Object {
              "amount": 22537.6,
              "so_num": 6,
              "year": "pa_last_year",
            },
            Object {
              "amount": 61703.16,
              "so_num": 7,
              "year": "pa_last_year",
            },
            Object {
              "amount": 82790.57,
              "so_num": 9,
              "year": "pa_last_year",
            },
            Object {
              "amount": 1245684740.9,
              "so_num": 10,
              "year": "pa_last_year",
            },
            Object {
              "amount": 198022.83,
              "so_num": 12,
              "year": "pa_last_year",
            },
            Object {
              "amount": -403548.69,
              "so_num": 21,
              "year": "pa_last_year",
            },
          ],
          "personel_data": Array [
            Object {
              "amount": 21984685.52,
              "so_num": 1,
              "year": "pa_last_year_2",
            },
            Object {
              "amount": 22397188.9,
              "so_num": 1,
              "year": "pa_last_year",
            },
          ],
          "personel_last_year_data": Array [
            Object {
              "amount": 22397188.9,
              "so_num": 1,
              "year": "pa_last_year",
            },
          ],
          "top_n_with_other": Array [
            Object {
              "amount": 1245684740.9,
              "so_num": 10,
              "year": "pa_last_year",
            },
            Object {
              "amount": 22397188.9,
              "so_num": 1,
              "year": "pa_last_year",
            },
            Object {
              "amount": 7696449.19,
              "so_num": 4,
              "year": "pa_last_year",
            },
            Object {
              "amount": 1141681.4700000002,
              "so_num": 0,
              "year": "pa_last_year",
            },
          ],
        },
      },
    },
  },
}
`;
